Opens java.lang package to unnamed module to fix error on Java 17.